@@ -47,6 +47,7 @@ Imports:
     pander,
     rmarkdown,
     utils,
+    XML,
     xtable
 Suggests:
     installr
