@@ -15,9 +15,14 @@ importFrom("pander", "pander")
 import(rmarkdown)
 importFrom("stats", "aggregate", "anova", "na.omit", "qnorm", "rstudent", "sd") 
 importFrom("utils", "browseURL", "create.post", "download.file", "file.edit", "installed.packages", "menu", "packageVersion", "read.csv", "read.table", "savehistory", "tail", "unzip", "write.csv") 
+import(XML)
 importFrom("xtable", "xtable")
+S3method(AddXML,default)
+  S3method(AddXML,histogram)
 S3method(dotplot,default)
   S3method(dotplot,formula)
+S3method(MakeAccessibleSVG,default)
+  S3method(MakeAccessibleSVG,histogram)
 S3method(print,wordlist)
 S3method(SVGThis,default)
   S3method(SVGThis,histogram)
